--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Die offizielle Webseite von meinem Spiel.
 baseurl: "/AppleVsApples" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  nilshindermann
+lang: de-DE
 
 # Build settings
 markdown: kramdown
