--- a/_data/testversions.yml
+++ b/_data/testversions.yml
@@ -1,3 +1,6 @@
+- name: Alpha 0.1 Dev Build 4
+  date: 2020-04-11
+  download: https://github.com/nilshindermann/AppleVsApples/releases/download/Alpha-0.1-4/Apple.vs.Apples.0.1-4-Alpha.jar
 - name: Alpha 0.1 Dev Build 3
   date: 2020-03-31
   download: https://github.com/nilshindermann/AppleVsApples/releases/download/Alpha-0.1-3/Apple-vs-Apples-0.1_3-Alpha.jar
