--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Apple vs. Apples
 email: nilshindermann@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Die offizielle Webseite von meinem Spiel.
-baseurl: "/AppleVsApples" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://applevsapples.nilsh.ch" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: nilshindermann
 lang: de-DE
 
